<resources>
    <string name="app_name">MAD_A1</string>
    <string name="lab_lecture">LAB &amp; LECTURE HALL RESERVATION \nSYSTEM</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="userID">User ID</string>
    <string name="password">Password</string>
    <string name="text_link">Forgot password?</string>
    <string name="todo">TODO</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="dashboard">Dashboard</string>
    <string name="operating_s">Operating System\n 8:00 AM - 10:00 AM\n SF 01\n 1st Year\n</string>
</resources>