<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="136dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal|top"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textAppearance="@style/login"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/form_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/form_log_in"
        android:layout_width="320dp"
        android:layout_height="322dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="168dp"
        android:background="@drawable/form_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <TextView

            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="25dp"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/userID"
            android:textAppearance="@style/label"
            android:translationY="-1.52sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="109dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="-117dp"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/password"
            android:textAppearance="@style/label"
            android:translationY="-1.52sp" />

        <EditText
            android:id="@+id/userID"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="129dp"
            android:autofillHints="userID"
            android:inputType=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="228dp"
            android:autofillHints="password"
            android:inputType=""
            tools:ignore="LabelFor,TextFields"/>

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="65dp"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="136dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="164dp"
            android:layout_marginBottom="19dp"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/text_link"
            android:textAppearance="@style/text_link"
            android:translationY="-1.52sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="124dp"
            android:layout_marginBottom="17dp" />

        <TextView

            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="195dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="21dp"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/remember_me"
            android:textAppearance="@style/text_link"
            android:translationY="-1.52sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>